--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,29 @@
 language: python
 sudo: false
-python:
-  - "2.6"
-  - "2.7"
-  - "3.2"
-  - "3.3"
-  - "3.4"
-  - "3.5"
-  - "3.5-dev" # 3.5 development branch
-  - "nightly" # currently points to 3.6-dev
-# command to install dependencies
+
+branches:
+  only:
+    - master
+
+matrix:
+  include:
+  - os: linux
+  python: "2.6"
+  python: "2.7"
+  - os: linux
+  python: "2.6"
+  python: "2.7"
+  python: "3.2"
+  python: "3.3"
+  python: "3.4"
+  python: "3.5"
+  python: "3.5-dev" # 3.5 development branch
+  python: "nightly" # currently points to 3.6-dev
+  - os: osx
+    python: "2.6"
+  - os: osx
+    python: "2.7"
+
 install: "make install"
 # command to run tests
 script: make test
