--- a/.travis.yml
+++ b/.travis.yml
@@ -8,17 +8,21 @@ branches:
 matrix:
   include:
   - os: linux
-  python: "2.6"
-  python: "2.7"
+    python: "2.6"
   - os: linux
-  python: "2.6"
-  python: "2.7"
-  python: "3.2"
-  python: "3.3"
-  python: "3.4"
-  python: "3.5"
-  python: "3.5-dev" # 3.5 development branch
-  python: "nightly" # currently points to 3.6-dev
+    python:  "2.7"
+  - os: linux
+    python:  "3.2"
+  - os: linux
+    python:  "3.3"
+  - os: linux
+    python:  "3.4"
+  - os: linux
+    python:  "3.5"
+  - os: linux
+    python:  "3.5-dev" # 3.5 development branch
+  - os: linux
+    python:  "nightly" # currently points to 3.6-dev
   - os: osx
     python: "2.6"
   - os: osx
