--- a/.travis.yml
+++ b/.travis.yml
@@ -23,11 +23,13 @@ matrix:
     python:  "3.5-dev" # 3.5 development branch
   - os: linux
     python:  "nightly" # currently points to 3.6-dev
+  - os: osx
+    python:  "2.6"
 
 before_install:
   - if [ $TRAVIS_OS_NAME == osx ] ; then brew search python || true ; fi
   - if [ $TRAVIS_OS_NAME == osx ] ; then brew install python2.6 python2.7 $INSTALL || true ; fi
 
-install: "make install"
+install: "make init"
 # command to run tests
 script: make test
