--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,13 @@ branches:
 matrix:
   include:
   - os: linux
-    python: "2.6"
+    python:  "2.6"
   - os: linux
     python:  "2.7"
+    dist: trusty
+  - os: linux
+    python:  "2.7"
+    dist: precice
   - os: linux
     python:  "3.2"
   - os: linux
@@ -19,19 +23,94 @@ matrix:
     python:  "3.4"
   - os: linux
     python:  "3.5"
+    dist: trusty
+  - os: linux
+    python:  "3.5"
+    dist: precice
+  - os: linux
+    python:  "3.6"
   - os: linux
     python:  "3.5-dev" # 3.5 development branch
   - os: linux
+    python:  "3.6-dev"
+  - os: linux
+    python:  "3.7-dev"
+  - os: linux
+    python: "pypy"  # PyPy2 2.5.0
+  - os: linux
+    python:  "pypy-5.3.1"
+  - os: linux
     python:  "nightly" # currently points to 3.6-dev
+  - os: osx
+    osx_image: xcode6.4
+    language: generic
   - os: osx
     osx_image: xcode7.2
     language: generic
+  - os: osx
+    osx_image: xcode7.3
+    language: generic
+  - os: osx
+    osx_image: xcode8
+    language: generic
+  - os: osx
+    osx_image: xcode8.3
+    language: generic
+  allow_failure:
+  - os: linux
+    python:  "2.6"
+  - os: linux
+    python:  "3.2"
+  - os: linux
+    python: "pypy"
+  - os: linux
+    python:  "pypy3"
+  - os: linux
+    python:  "pypy-5.3.1"
 
 before_install:
-  - if [ $TRAVIS_OS_NAME == osx ] ; then brew search python || true ; fi
-  - if [ $TRAVIS_OS_NAME == osx ] ; then brew install python2.6 python2.7 $INSTALL || true ; fi
-  - if [ $TRAVIS_OS_NAME == osx ] ; then mkdir -p /etc/ 2>/dev/null || true ; wait ; echo "" >> /etc/hosts.deny 2>/dev/null || true ; fi
+  - if [ $TRAVIS_OS_NAME == osx ] ; then travis_retry brew tap homebrew/versions || true ; fi
+  - if [ $TRAVIS_OS_NAME == osx ] ; then travis_wait brew upgrade || travis_retry brew upgrade || true ; fi
+  - if [ $TRAVIS_OS_NAME == osx ] ; then brew install python2.6 $INSTALL || true ; fi
+  - if [ $TRAVIS_OS_NAME == osx ] ; then brew install python26 $INSTALL || true ; fi
+  - if [ $TRAVIS_OS_NAME == osx ] ; then travis_wait brew install python3 $INSTALL || true ; fi
+  - if [ $TRAVIS_OS_NAME == osx ] ; then brew install python3.3 $INSTALL || true ; fi
+  - if [ $TRAVIS_OS_NAME == osx ] ; then brew install py3.3 $INSTALL || true ; fi
+  - if [ $TRAVIS_OS_NAME == osx ] ; then brew install python3.4 $INSTALL || true ; fi
+  - if [ $TRAVIS_OS_NAME == osx ] ; then brew install python34 $INSTALL || true ; fi
+  - if [ $TRAVIS_OS_NAME == osx ] ; then brew install py3.4 $INSTALL || true ; fi
+  - if [ $TRAVIS_OS_NAME == osx ] ; then brew install python3.5 $INSTALL || true ; fi
+  - if [ $TRAVIS_OS_NAME == osx ] ; then brew install python35 $INSTALL || true ; fi
+  - if [ $TRAVIS_OS_NAME == osx ] ; then brew install py3.5 $INSTALL || true ; fi
+  - if [ $TRAVIS_OS_NAME == osx ] ; then brew install python3.6 $INSTALL || true ; fi
+  - if [ $TRAVIS_OS_NAME == osx ] ; then brew install python36 $INSTALL || true ; fi
+  - if [ $TRAVIS_OS_NAME == osx ] ; then brew install py3.6 $INSTALL || true ; fi
+  - if [ $TRAVIS_OS_NAME == osx ] ; then brew install python2.7 $INSTALL || true ; fi
+  - if [ $TRAVIS_OS_NAME == osx ] ; then brew install python27 $INSTALL || true ; fi
+  - if [ $TRAVIS_OS_NAME == osx ] ; then brew install py2.7 $INSTALL || true ; fi
+  - if [ $TRAVIS_OS_NAME == osx ] ; then brew install python3.6 $INSTALL || true ; fi
+  - if [ $TRAVIS_OS_NAME == osx ] ; then brew install python3.7 $INSTALL || true ; fi
+  - if [ $TRAVIS_OS_NAME == osx ] ; then brew install coverage $INSTALL || true ; fi
+  - if [ $TRAVIS_OS_NAME == osx ] ; then brew install codecov $INSTALL || true ; fi
+  - travis_retry pip install tox || pip install tox || true ;
+  - travis_retry pip install coverage || true ;
+  - travis_retry pip install codecov || true ;
+  - travis_retry python -m pip install coverage || python -m pip install coverage || true ;
+  - travis_retry python -m pip install codecov || python -m pip install codecov || true ;
+  - travis_retry python3 -m pip install tox || python3 -m pip install tox || true ;
+  - travis_retry python3 -m pip install coverage || python3 -m pip install coverage || true ;
+  - travis_retry python3 -m pip install codecov || python3 -m pip install codecov || true ;
+  - travis_retry python3 -m pip install -r requirements.txt || python3 -m pip install -r requirements.txt || true ;
 
 install: "make init"
-# command to run tests
-script: make test
+
+script:
+  - make clean ;
+  - if [ $TRAVIS_OS_NAME == osx ] ; then echo "SKIP make test" ; else make test || exit $? ; fi ;
+  - if [ $TRAVIS_OS_NAME == osx ] ; then echo "SKIP codecov" ; else codecov || exit $? ; fi ;
+  - make clean || exit $? ; 
+  - make test-tox || exit $? ;
+  - make clean ;
+
+after_success:
+  - if [ $TRAVIS_OS_NAME == osx ] ; then echo "SKIP codecov" ; else codecov || exit $? ; fi ;
