--- a/.travis.yml
+++ b/.travis.yml
@@ -102,7 +102,7 @@ before_install:
   - travis_retry python3 -m pip install codecov || python3 -m pip install codecov || true ;
   - travis_retry python3 -m pip install -r requirements.txt || python3 -m pip install -r requirements.txt || true ;
 
-install: "make init"
+install: "make install"
 
 script:
   - make clean ;
