fixed python 3.5 path regresssion caused by Travis-CI environment upgrades.

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,16 @@
 [tox]
-envlist = py{27,33,34,35,36,37}, docs, flake
+envlist = py{27,33,34,35,36,37}, py35-travis, docs, flake
 skip_missing_interpreters=True
 
 
 [base]
+passenv =
+	CODECOV_TOKEN
+	CI
+	CI_*
+	GIT_*
+	TRAVIS
+	TRAVIS_*
 deps = -r{toxinidir}/requirements.txt
 
 
@@ -12,14 +19,12 @@ sitepackages = False
 recreate = True
 alwayscopy = True
 passenv =
-	CI
-	TRAVIS
-	TRAVIS_*
+	{[base]passenv}
 basepython =
     py27: python2.7
     py33: python3.3
     py34: python3.4
-    py35: python3.5
+    py35: /usr/bin/python3.5
     py36: python3.6
     py37: python3.7
 deps =
@@ -40,9 +45,8 @@ sitepackages = False
 recreate = True
 alwayscopy = True
 passenv =
-	CI
-	TRAVIS
-	TRAVIS_*
+	TRAVIS_PYTHON_VERSION="2.7"
+	{[base]passenv}
 basepython = python2.7
 deps =
     coverage>=4.4
@@ -53,6 +57,7 @@ commands =
 	python2.7 -m coverage run -p --source=FetchPublicBlacklists -m unittest discover --verbose -t ./
 	- coverage combine
 	- coverage report --include=FetchPublicBlacklists*
+	- codecov
 
 
 [testenv:py33]
@@ -60,9 +65,8 @@ sitepackages = False
 recreate = True
 alwayscopy = True
 passenv =
-	CI
-	TRAVIS
-	TRAVIS_*
+	TRAVIS_PYTHON_VERSION="3.3"
+	{[base]passenv}
 basepython = python3.3
 deps =
     coverage>=4.4
@@ -73,6 +77,7 @@ commands =
 	python3.3 -m coverage run -p --source=FetchPublicBlacklists -m unittest discover --verbose -t ./
 	- coverage combine
 	- coverage report --include=FetchPublicBlacklists*
+	- codecov
 
 
 [testenv:py34]
@@ -80,9 +85,8 @@ sitepackages = False
 recreate = True
 alwayscopy = True
 passenv =
-	CI
-	TRAVIS
-	TRAVIS_*
+	TRAVIS_PYTHON_VERSION="3.4"
+	{[base]passenv}
 basepython = python3.4
 deps =
     coverage>=4.4
@@ -93,17 +97,18 @@ commands =
 	python3.4 -m coverage run -p --source=FetchPublicBlacklists -m unittest discover --verbose -t ./
 	- coverage combine
 	- coverage report --include=FetchPublicBlacklists*
+	- codecov
 
 
 [testenv:py35]
+description = Python 3.5 Tests
 sitepackages = False
 recreate = True
 alwayscopy = True
 passenv =
-	CI
-	TRAVIS
-	TRAVIS_*
-basepython = python3.5
+	TRAVIS_PYTHON_VERSION="3.5"
+	{[base]passenv}
+basepython = /usr/bin/python3.5
 deps =
     coverage>=4.4
     codecov>=2.0.9
@@ -113,6 +118,28 @@ commands =
 	python3.5 -m coverage run -p --source=FetchPublicBlacklists -m unittest discover --verbose -t ./
 	- coverage combine
 	- coverage report --include=FetchPublicBlacklists*
+	- codecov
+
+
+[testenv:py35-travis]
+description = Python 3.5 Tests
+sitepackages = False
+recreate = True
+alwayscopy = True
+passenv =
+	TRAVIS_PYTHON_VERSION="3.5"
+	{[base]passenv}
+basepython = /home/travis/virtualenv/python3.5/bin/python3.5
+deps =
+    coverage>=4.4
+    codecov>=2.0.9
+    {[base]deps}
+commands = 
+	coverage erase
+	python3.5 -m coverage run -p --source=FetchPublicBlacklists -m unittest discover --verbose -t ./
+	- coverage combine
+	- coverage report --include=FetchPublicBlacklists*
+	- codecov
 
 
 [testenv:py36]
@@ -120,9 +147,8 @@ sitepackages = False
 recreate = True
 alwayscopy = True
 passenv =
-	CI
-	TRAVIS
-	TRAVIS_*
+	TRAVIS_PYTHON_VERSION="3.6"
+	{[base]passenv}
 basepython = python3.6
 deps =
     coverage>=4.4
@@ -133,6 +159,7 @@ commands =
 	python3.6 -m coverage run -p --source=FetchPublicBlacklists -m unittest discover --verbose -t ./
 	- coverage combine
 	- coverage report --include=FetchPublicBlacklists*
+	- codecov
 
 
 [testenv:py37]
@@ -140,9 +167,8 @@ sitepackages = False
 recreate = True
 alwayscopy = True
 passenv =
-	CI
-	TRAVIS
-	TRAVIS_*
+	TRAVIS_PYTHON_VERSION="3.7"
+	{[base]passenv}
 basepython = python3.7
 deps =
     coverage>=4.4
@@ -153,6 +179,7 @@ commands =
 	python3.7 -m coverage run -p --source=FetchPublicBlacklists -m unittest discover --verbose -t ./
 	- coverage combine
 	- coverage report --include=FetchPublicBlacklists*
+	- codecov
 
 
 [testenv:flake]
