--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ sudo: false
 branches:
   only:
     - master
+    - stable
 
 matrix:
   include:
@@ -11,10 +12,6 @@ matrix:
     python:  "2.6"
   - os: linux
     python:  "2.7"
-    dist: trusty
-  - os: linux
-    python:  "2.7"
-    dist: precice
   - os: linux
     python:  "3.2"
   - os: linux
@@ -23,10 +20,6 @@ matrix:
     python:  "3.4"
   - os: linux
     python:  "3.5"
-    dist: trusty
-  - os: linux
-    python:  "3.5"
-    dist: precice
   - os: linux
     python:  "3.6"
   - os: linux
@@ -55,6 +48,9 @@ matrix:
     language: generic
   - os: osx
     osx_image: xcode8.3
+    language: generic
+  - os: osx
+    osx_image: xcode9
     language: generic
   allow_failure:
   - os: linux
