fix for missing doc test config

--- a/tox.ini
+++ b/tox.ini
@@ -181,6 +181,19 @@ commands =
 	- coverage report --include=FetchPublicBlacklists*
 	- codecov
 
+[testenv:docs]
+description = Documentation Tests
+whitelist_externals = make
+deps = 
+        docs: sphinx>=1.6.3
+        flake8>=2.5.4
+        mccabe>=0.6.1
+        pyflakes>=1.1.0
+        pep8>=1.7.0
+        coverage>=4.4
+    {[base]deps}
+commands = 
+        - make -s -C ./docs/ -f Makefile clean
 
 [testenv:flake]
 basepython =
