fix for missing doc test config

--- a/tox.ini
+++ b/tox.ini
@@ -196,6 +196,7 @@ commands =
         - make -s -C ./docs/ -f Makefile clean
 
 [testenv:flake]
+description = PEP8 Code Style Tests
 basepython =
     flake: python3
 deps =
