--- a/.travis.yml
+++ b/.travis.yml
@@ -66,7 +66,7 @@ matrix:
 
 before_install:
   - if [ $TRAVIS_OS_NAME == osx ] ; then travis_retry brew tap homebrew/versions || true ; fi
-  - if [ $TRAVIS_OS_NAME == osx ] ; then if [ ${TRAVIS_OSX_IMAGE:-none} == xcode6.4 ] ; then brew list | tr -s ' \t' '\n' | xargs -L1 -I{} travis_wait brew upgrade {} || travis_retry brew upgrade || true ; else travis_wait brew upgrade || travis_retry brew upgrade || true ; fi
+  - if [ $TRAVIS_OS_NAME == osx ] ; then if [ ${TRAVIS_OSX_IMAGE:-none} == xcode6.4 ] ; then travis_retry brew upgrade || travis_wait 40 brew upgrade || true ; else travis_wait brew upgrade || travis_retry brew upgrade || true ; fi
   - if [ $TRAVIS_OS_NAME == osx ] ; then brew install python2.6 $INSTALL || true ; fi
   - if [ $TRAVIS_OS_NAME == osx ] ; then brew install python26 $INSTALL || true ; fi
   - if [ $TRAVIS_OS_NAME == osx ] ; then travis_wait brew install python3 $INSTALL || true ; fi
