--- a/.travis.yml
+++ b/.travis.yml
@@ -53,6 +53,9 @@ matrix:
     osx_image: xcode9
     language: generic
   allow_failure:
+  - os: osx
+    osx_image: xcode6.4
+    language: generic
   - os: linux
     python:  "2.6"
   - os: linux
@@ -66,7 +69,7 @@ matrix:
 
 before_install:
   - if [ $TRAVIS_OS_NAME == osx ] ; then travis_retry brew tap homebrew/versions || true ; fi
-  - if [ $TRAVIS_OS_NAME == osx ] ; then if [ ${TRAVIS_OSX_IMAGE:-none} == xcode6.4 ] ; then travis_retry brew upgrade || travis_wait 40 brew upgrade || true ; else travis_wait brew upgrade || travis_retry brew upgrade || true ; fi ; fi
+  - if [ $TRAVIS_OS_NAME == osx ] ; then if [ ${TRAVIS_OSX_IMAGE:-none} == xcode6.4 ] ; then travis_wait 30 brew upgrade || travis_retry brew upgrade || true ; else travis_wait brew upgrade || travis_retry brew upgrade || true ; fi ; fi
   - if [ $TRAVIS_OS_NAME == osx ] ; then brew install python2.6 $INSTALL || true ; fi
   - if [ $TRAVIS_OS_NAME == osx ] ; then brew install python26 $INSTALL || true ; fi
   - if [ $TRAVIS_OS_NAME == osx ] ; then travis_wait brew install python3 $INSTALL || true ; fi
