--- a/.travis.yml
+++ b/.travis.yml
@@ -29,14 +29,13 @@ matrix:
   - os: linux
     python:  "3.7-dev"
   - os: linux
+    python:  "3.8-dev"
+  - os: linux
     python: "pypy"  # PyPy2 2.5.0
   - os: linux
     python:  "pypy-5.3.1"
   - os: linux
-    python:  "nightly" # currently points to 3.6-dev
-  - os: osx
-    osx_image: xcode6.4
-    language: generic
+    python:  "nightly" # currently points to 3.7-dev
   - os: osx
     osx_image: xcode7.2
     language: generic
