--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{27,33,34,35,36,37}, py35-travis, py36-travis, docs, flake
+envlist = py{27,33,34,35,36,37,38}, py35-travis, py36-travis, docs, flake
 skip_missing_interpreters=True
 
 
@@ -14,7 +14,7 @@ passenv =
 deps = -r{toxinidir}/requirements.txt
 
 
-[testenv:py{27,33,34,35,36,37}]
+[testenv:py{27,33,34,35,36,37,38}]
 sitepackages = False
 recreate = True
 alwayscopy = True
@@ -27,6 +27,7 @@ basepython =
 	py35: /usr/bin/python3.5
 	py36: python3.6
 	py37: python3.7
+	py38: python3.8
 deps =
 	coverage>=4.4
 	codecov>=2.0.9
@@ -38,6 +39,7 @@ commands =
 	py35: python3.5 -m coverage run -p --source=FetchPublicBlacklists -m unittest discover --verbose -t ./
 	py36: python3.6 -m coverage run -p --source=FetchPublicBlacklists -m unittest discover --verbose -t ./
 	py37: python3.7 -m coverage run -p --source=FetchPublicBlacklists -m unittest discover --verbose -t ./
+	py38: python3.8 -m coverage run -p --source=FetchPublicBlacklists -m unittest discover --verbose -t ./
 
 
 [testenv:py27]
@@ -197,6 +199,25 @@ deps =
 commands = 
 	coverage erase
 	python3.7 -m coverage run -p --source=FetchPublicBlacklists -m unittest discover --verbose -t ./
+	- coverage combine
+	- coverage report --include=FetchPublicBlacklists*
+	- codecov
+
+[testenv:py38]
+sitepackages = False
+recreate = True
+alwayscopy = True
+passenv =
+	TRAVIS_PYTHON_VERSION="3.8"
+	{[base]passenv}
+basepython = python3.8
+deps =
+    coverage>=4.4
+    codecov>=2.0.9
+    {[base]deps}
+commands = 
+	coverage erase
+	python3.8 -m coverage run -p --source=FetchPublicBlacklists -m unittest discover --verbose -t ./
 	- coverage combine
 	- coverage report --include=FetchPublicBlacklists*
 	- codecov
