fix for CI python versions on mac OS X

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{27,33,34,35,36,37,38}, py35-travis, py36-travis, docs, flake
+envlist = py{27,33,34,35,36,37,38}, py{35,36}-travis, docs, flake
 skip_missing_interpreters=True
 
 
@@ -11,6 +11,7 @@ passenv =
 	GIT_*
 	TRAVIS
 	TRAVIS_*
+	VERSIONER_PYTHON_VERSION
 deps = -r{toxinidir}/requirements.txt
 
 
@@ -25,7 +26,7 @@ basepython =
 	py33: python3.3
 	py34: python3.4
 	py35: /usr/bin/python3.5
-	py36: python3.6
+	py36: /usr/bin/python3.6
 	py37: python3.7
 	py38: python3.8
 deps =
