--- a/.travis.yml
+++ b/.travis.yml
@@ -8,30 +8,42 @@ branches:
 
 python:
 
+env:
+
 os:
 
 matrix:
   include:
   - os: linux
     python:  "2.6"
+    env: TRAVIS_PYTHON_VERSION="2.6"
   - os: linux
     python:  "2.7"
+    env: TRAVIS_PYTHON_VERSION="2.7"
   - os: linux
     python:  "3.2"
+    env: TRAVIS_PYTHON_VERSION="3.2"
   - os: linux
     python:  "3.3"
+    env: TRAVIS_PYTHON_VERSION="3.3"
   - os: linux
     python:  "3.4"
+    env: TRAVIS_PYTHON_VERSION="3.4"
   - os: linux
     python:  "3.5"
+    env: TRAVIS_PYTHON_VERSION="3.5"
   - os: linux
     python:  "3.6"
+    env: TRAVIS_PYTHON_VERSION="3.6"
   - os: linux
     python:  "3.5-dev" # 3.5 development branch
+    env: TRAVIS_PYTHON_VERSION="3.5"
   - os: linux
     python:  "3.6-dev"
+    env: TRAVIS_PYTHON_VERSION="3.6"
   - os: linux
     python:  "3.7-dev"
+    env: TRAVIS_PYTHON_VERSION="3.7"
   - os: linux
     python: "pypy"  # PyPy2 2.5.0
   - os: linux
@@ -61,8 +73,10 @@ matrix:
     language: generic
   - os: linux
     python:  "2.6"
+    env: TRAVIS_PYTHON_VERSION="2.6"
   - os: linux
     python:  "3.2"
+    env: TRAVIS_PYTHON_VERSION="3.2"
   - os: linux
     python: "pypy"
   - os: linux
