--- a/.travis.yml
+++ b/.travis.yml
@@ -128,7 +128,7 @@ script:
   - if [ $TRAVIS_OS_NAME == osx ] ; then echo "SKIP make test" ; else make test || exit $? ; fi
   - if [ $TRAVIS_OS_NAME == osx ] || [ $TRAVIS_PYTHON_VERSION == 3.2 ] ; then echo "SKIP codecov" ; else codecov || exit $? ; fi
   - make clean || exit $? ;
-  - if [ $TRAVIS_PYTHON_VERSION == 3.2 ] ; then echo "SKIP tox" ; else make test-tox || exit $? ; fi
+  - if [ $TRAVIS_PYTHON_VERSION == 3.2 ] || [ $TRAVIS_PYTHON_VERSION == 3.3 ]; then echo "SKIP tox" ; else make test-tox || exit $? ; fi
 
 after_script:
   - make clean
