--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ env:
 
 os:
 
+dist:
+
 matrix:
   include:
   - os: linux
@@ -51,6 +53,24 @@ matrix:
   - os: linux
     python:  "nightly" # currently points to 3.7-dev
   - os: osx
+    osx_image: xcode9
+    language: generic
+  - os: osx
+    osx_image: xcode9.4
+    language: generic
+  - os: osx
+    osx_image: xcode10
+    language: generic
+  - os: osx
+    osx_image: xcode10.1
+    language: generic
+  allow_failure:
+  - os: linux
+    python:  "3.8-dev"
+  - os: osx
+    osx_image: xcode6.4
+    language: generic
+  - os: osx
     osx_image: xcode7.2
     language: generic
   - os: osx
@@ -58,18 +78,6 @@ matrix:
     language: generic
   - os: osx
     osx_image: xcode8
-    language: generic
-  - os: osx
-    osx_image: xcode8.3
-    language: generic
-  - os: osx
-    osx_image: xcode9
-    language: generic
-  allow_failure:
-  - os: linux
-    python:  "3.8-dev"
-  - os: osx
-    osx_image: xcode6.4
     language: generic
   - os: linux
     python:  "2.6"
